--- a/src/main/webapp/layout.css
+++ b/src/main/webapp/layout.css
@@ -1,72 +1,72 @@
 * {
     font-family: 'Fraunces', serif;
-    color: #fff;
+    color: #070e0cee;
+}
+#aplicacionCalculadora{
+    height: 340px;
+    width: 300;
+    justify-content: center;
+    border: 1px solid green;
+    background-color: #11b987;
+    border-radius: 32px;
+    box-shadow: 15px 10px 0px 5px #00000033;
+
+    
+
+
+
 }
 
 body {
     margin: 0;
     background-color: #706422;
+   
+    padding: 100px 500px
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 
-.calculadora {
-    display: grid;
-   grid-template-columns: repeat(4, 75px);
-    grid-template-rows: 160px repeat(5, 75px);
-    background-color: #bfc9c6;
+#aplicacionCalculadora input[ type="textfield"]{
+    height: 30%;
+    width: 100%;
+    cursor: default;
     padding: 15px;
+    text-align: right;
+    outline: none;
+   
+    align-items: flex-end;
+    background-color: #e2dddd;
     border-radius: 32px;
+    font-size: 20px;
+ 
     box-shadow: 15px 10px 0px 5px #00000033;
+
+
+    
 }
 
-button {
+#aplicacionCalculadora input[type="button"]{
+    
+
+
+    width: 23%;
     cursor: pointer;
-    margin: 5px;
-    padding: 0;
+    padding: 10px;
     border-radius: 32px;
     font-size: 1.5em;
     border: none;
     background-color: #00916e;
     box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+    background-color: #bfc9c6;
+ 
+
 }
 
-button:active {
-    background-color: #006f32;
-}
-
-button:focus {
-    outline: none;
-}
-
-.col-2 {
-    grid-column: span 2;
-}
-
-.display {
-    grid-column: 1 / -1;
-    padding: 16px;
-    display: flex;
-    margin: 10px 10px 20px;
-    flex-direction: column;
-    align-items: flex-end;
-    background-color: #e2dddd;
+.calculadora {
+    display: grid;
+    grid-template-columns: repeat(4, 75px);
+    grid-template-rows: 160px repeat(5, 75px);
+    background-color: #00916e;
+    padding: 15px;
     border-radius: 32px;
-    text-align: right;
-    justify-content: space-between;
-    word-break: break-all;
-    box-shadow: 0px 0px 0px 10px #00000033;
-}
-
-#valor-actual {
-    font-size: 1.5em;
-}
-
-#valor-anterior {
-    font-size: 2em;
+    box-shadow: 15px 10px 0px 5px #00000033;
 }
